# pycwl

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
pycwl/: __init__.py  exceptions.py
pycwl/parse/: __init__.py  command_line_tool.py
pycwl/schema/: __init__.py  command_input_parameter.py  command_line_tool.py  command_output_parameter.py
tests/: conftest.py
tests/fixtures/documents/command_line_tool/: base.cwl  base_command_arguments.cwl  base_command_list.cwl  base_command_string.cwl  inputs.cwl  outputs.cwl
tests/parse/: test_command_line_tool.py
tests/parse/test_command_line_tool/: test_parse_command_line_tool_base_command_arguments_cwl_.yml  test_parse_command_line_tool_base_command_list_cwl_.yml  test_parse_command_line_tool_base_command_string_cwl_.yml  test_parse_command_line_tool_base_cwl_.yml  test_parse_command_line_tool_inputs_cwl_.yml  test_parse_command_line_tool_outputs_cwl_.yml
tests/schema/: test_command_input_parameter.py  test_command_input_tool.py
