[build-system]
requires = ['setuptools>=60']
build-backend = 'setuptools.build_meta'

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.pydocstyle]
ignore = [
    'D104',
    'D203',
    'D213',
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'redefined-outer-name',
    'too-few-public-methods',
]
extension-pkg-whitelist = ['pydantic']

[tool.pytest.ini_options]
filterwarnings = []

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = 'google'
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true
indent_dictionary_value = false
split_arguments_when_comma_terminated = true
