[metadata]
author = Sebastiaan P. Huber
author_email = mail@sphuber.net
name = pycwl
version = attr: pycwl.__version__
description = Python package to work with Common Workflow Language.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = https://github.com/sphuber/pycwl
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires >= 3.8
install_requires =
    pydantic

[options.extras_require]
pre-commit =
    pre-commit~=2.16
    pylint~=2.12
tests =
    pytest~=6.2
    pytest-regressions~=2.0
